--- a/docs/oceananigans.bib
+++ b/docs/oceananigans.bib
@@ -991,3 +991,12 @@
 	year = {2022},
 	doi = {https://doi.org/10.1016/j.jcp.2022.111050},
 }
+
+@article{Verstappen14,
+    author = {Verstappen, Roel and Rozema, Wybe and Bae, H. Jane},
+	year = {2014},
+	month = {12},
+	pages = {417-426},
+	title = {Numerical scale separation in large-eddy simulation},
+	url = {https://www.researchgate.net/publication/311885631}
+}
