--- a/docs/oceananigans.bib
+++ b/docs/oceananigans.bib
@@ -992,10 +992,10 @@
     doi = {https://doi.org/10.1016/j.jcp.2022.111050},
 }
 
-@article{Verstappen14,
-    author = {Verstappen, Roel and Rozema, Wybe and Bae, H. Jane},
-    year = {2014},
-    month = {12},
-    pages = {417-426},
-    title = {Numerical scale separation in large-eddy simulation},
+@inproceedings{Verstappen14,
+  title={Numerical scale separation in large-eddy simulation},
+  author={Verstappen, RWCP and Rozema, W and Bae, HJ},
+  booktitle={Proceedings of the Summer Program},
+  pages={417--426},
+  year={2014}
 }
