--- a/docs/oceananigans.bib
+++ b/docs/oceananigans.bib
@@ -989,14 +989,13 @@
 	volume = {457},
 	pages = {111050},
 	year = {2022},
-	doi = {https://doi.org/10.1016/j.jcp.2022.111050},
+        doi = {https://doi.org/10.1016/j.jcp.2022.111050},
 }
 
-@article{Verstappen14,
-    author = {Verstappen, Roel and Rozema, Wybe and Bae, H. Jane},
-	year = {2014},
-	month = {12},
-	pages = {417-426},
-	title = {Numerical scale separation in large-eddy simulation},
-	url = {https://www.researchgate.net/publication/311885631}
+@inproceedings{Verstappen14,
+  title={Numerical scale separation in large-eddy simulation},
+  author={Verstappen, Roel and Rozema, Wybe and Bae, H. Jane},
+  booktitle={Proceedings of the Summer Program},
+  pages={417--426},
+  year={2014}
 }
