Use default `prettyurls=true` in docs build (#4520)
* Update make.jl

* Update make.jl

* prettyurls is by default true

* fix distributed grid docs

* Update oceananigans.bib

* Update anisotropic_minimum_dissipation.jl

* Update oceananigans.bib

* Update anisotropic_minimum_dissipation.jl

* some improvement of distributed docs

* fix doctest + docstring

* try ... to filter doctest

* convert doctest to exampe

this came after many failed attempts and a lot of back an forth with chatgpt regarding how to filter a line in a doctest... I find it one of the hardests things to do... :(

* add VarianceDissipationComputations

* remove stray spaces

---------

Co-authored-by: Simone Silvestri <silvestri.simone0@gmail.com>
Co-authored-by: Gregory L. Wagner <wagner.greg@gmail.com>

--- a/docs/oceananigans.bib
+++ b/docs/oceananigans.bib
@@ -909,15 +909,15 @@
 
 
 @inbook{Fox-Kemper2008,
-	author = {Fox-Kemper, B. and Menemenlis, D.},
-	publisher = {American Geophysical Union (AGU)},
-	isbn = {9781118666432},
-	title = {Can large eddy simulation techniques improve mesoscale rich ocean models?},
-	booktitle = {Ocean Modeling in an Eddying Regime},
-	chapter = {},
-	pages = {319-337},
-	doi = {10.1029/177GM19},
-	year = {2008},
+    author = {Fox-Kemper, B. and Menemenlis, D.},
+    publisher = {American Geophysical Union (AGU)},
+    isbn = {9781118666432},
+    title = {Can large eddy simulation techniques improve mesoscale rich ocean models?},
+    booktitle = {Ocean Modeling in an Eddying Regime},
+    chapter = {},
+    pages = {319-337},
+    doi = {10.1029/177GM19},
+    year = {2008},
 }
 
 @article{Pearson2017,
@@ -983,20 +983,19 @@
 }
 
 @article{Lan2022,
-	author = {Lan, Rihui and Ju, Lili and Wanh, Zhu and Gunzburger, Max and Jones, Philip},
-	title = {High-order multirate explicit time-stepping schemes for the baroclinic-barotropic split dynamics in primitive equations},
-	journal = {Journal of Computational Physics},
-	volume = {457},
-	pages = {111050},
-	year = {2022},
-	doi = {https://doi.org/10.1016/j.jcp.2022.111050},
+    author = {Lan, Rihui and Ju, Lili and Wanh, Zhu and Gunzburger, Max and Jones, Philip},
+    title = {High-order multirate explicit time-stepping schemes for the baroclinic-barotropic split dynamics in primitive equations},
+    journal = {Journal of Computational Physics},
+    volume = {457},
+    pages = {111050},
+    year = {2022},
+    doi = {https://doi.org/10.1016/j.jcp.2022.111050},
 }
 
-@article{Verstappen14,
-    author = {Verstappen, Roel and Rozema, Wybe and Bae, H. Jane},
-	year = {2014},
-	month = {12},
-	pages = {417-426},
-	title = {Numerical scale separation in large-eddy simulation},
-	url = {https://www.researchgate.net/publication/311885631}
+@inproceedings{Verstappen14,
+  title={Numerical scale separation in large-eddy simulation},
+  author={Verstappen, RWCP and Rozema, W and Bae, HJ},
+  booktitle={Proceedings of the Summer Program},
+  pages={417--426},
+  year={2014}
 }
