--- a/docs/oceananigans.bib
+++ b/docs/oceananigans.bib
@@ -983,18 +983,18 @@
 }
 
 @article{Lan2022,
-    author = {Lan, Rihui and Ju, Lili and Wanh, Zhu and Gunzburger, Max and Jones, Philip},
-    title = {High-order multirate explicit time-stepping schemes for the baroclinic-barotropic split dynamics in primitive equations},
-    journal = {Journal of Computational Physics},
-    volume = {457},
-    pages = {111050},
-    year = {2022},
-    doi = {https://doi.org/10.1016/j.jcp.2022.111050},
+	author = {Lan, Rihui and Ju, Lili and Wanh, Zhu and Gunzburger, Max and Jones, Philip},
+	title = {High-order multirate explicit time-stepping schemes for the baroclinic-barotropic split dynamics in primitive equations},
+	journal = {Journal of Computational Physics},
+	volume = {457},
+	pages = {111050},
+	year = {2022},
+  doi = {10.1016/j.jcp.2022.111050},
 }
 
 @inproceedings{Verstappen14,
   title={Numerical scale separation in large-eddy simulation},
-  author={Verstappen, RWCP and Rozema, W and Bae, HJ},
+  author={Verstappen, Roel and Rozema, Wybe and Bae, H. Jane},
   booktitle={Proceedings of the Summer Program},
   pages={417--426},
   year={2014}
