add Adcroft and Campin 2004 star

--- a/docs/oceananigans.bib
+++ b/docs/oceananigans.bib
@@ -999,3 +999,14 @@
   pages={417--426},
   year={2014}
 }
+
+@article{adcroft2004rescaled,
+  title={Rescaled height coordinates for accurate representation of free-surface flows in ocean circulation models},
+  author={Adcroft, Alistair and Campin, Jean-Michel},
+  journal={Ocean Modelling},
+  volume={7},
+  number={3-4},
+  pages={269--284},
+  year={2004},
+  doi={10.1016/j.ocemod.2003.09.003}
+}
