fix docstrings/add refs

--- a/docs/oceananigans.bib
+++ b/docs/oceananigans.bib
@@ -1010,3 +1010,34 @@
   year={2004},
   doi={10.1016/j.ocemod.2003.09.003}
 }
+
+@article{burchard2001comparative,
+  title={Comparative analysis of four second-moment turbulence closure models for the oceanic mixed layer},
+  author={Burchard, Hans and Bolding, Karsten},
+  journal={Journal of Physical Oceanography},
+  volume={31},
+  number={8},
+  pages={1943--1968},
+  year={2001}
+}
+
+@article{umlauf2003generic,
+  title={A generic length-scale equation for geophysical turbulence models},
+  author={Umlauf, Lars and Burchard, Hans},
+  year={2003},
+  journal={Journal of Marine Research},
+  volume={61},
+  issue={2},
+  url={https://elischolar.library.yale.edu/journal_of_marine_research/9}
+}
+
+@article{umlauf2005second,
+  title={Second-order turbulence closure models for geophysical boundary layers. A review of recent work},
+  author={Umlauf, Lars and Burchard, Hans},
+  journal={Continental Shelf Research},
+  volume={25},
+  number={7-8},
+  pages={795-827},
+  year={2005},
+  publisher={Elsevier}
+}
